...
      {amountError.length > 0 && (
        <ErrorMessage onDismiss={clearError} message={amountError} />
      )}

      <UI.Block backgroundColor={colors.background} style={styles.header}>
        <UI.Block row center justify="space-between">
          <UI.Text h2>Cash out</UI.Text>
          <UI.Clickable
            onClick={() => navigation.navigate('Notifications')}
            style={[styles.notificationButton, {borderColor: colors.gray4}]}>
            <UI.Icon color={colors.text} name="notifications" />
          </UI.Clickable>
        </UI.Block>
...
          value={amount}
          maxLength={8}
        />

        <UI.Block style={{paddingHorizontal: 20}}>
          <UI.Button
            testID="withdraw_button"
            primary
            onClick={handleWithdrawal}>
            <UI.Text bold color={colors.white}>
              WITHDRAW
            </UI.Text>
          </UI.Button>
...
